<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NodeCast TV</string>

    <string name="setup_title">NodeCast TV</string>
    <string name="setup_subtitle">Enter the address of your NodeCast server</string>
    <string name="setup_hint">http://192.168.1.10</string>
    <string name="setup_save">Save &amp; Connect</string>
    <string name="setup_error_empty">Please enter a server address</string>

    <string name="error_title">Could not load NodeCast TV</string>
    <string name="error_message">Check that the server address is correct and that this device is on the same network as the server.</string>
    <string name="error_retry">Retry</string>
    <string name="error_change_server">Change Server</string>
</resources>
